# bedolaga-admin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/admin/: __init__.py  auth.py  views.py
app/core/: __init__.py  config.py  csrf.py  permissions.py  security.py
app/db/: __init__.py  base.py  session.py
app/i18n/: __init__.py  messages.py
app/middlewares/: __init__.py  locale.py
app/models/: __init__.py  admin_user.py  bot_entities.py  security.py
app/services/: audit.py  overview.py  rate_limiter.py  roles.py  webapi.py
app/static/: admin.css  sqladmin.css
app/templates/: actions.html  overview.html  setup.html
app/templates/i18n/: macros.html
app/templates/sqladmin/: create.html  details.html  edit.html  layout.html  list.html  login.html
app/templates/sqladmin/modals/: delete.html  list_action_confirmation.html
docs/: development.md  docker.md  roadmap.md  stage2-plan.md  stage3-plan.md  stage4-plan.md
scripts/: create_admin.py  init_roles.py
