[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bedolaga-admin"
version = "0.1.0"
description = "Админ-панель на FastAPI и SQLAdmin для бота Bedolaga."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Bedolaga Team" }
]
dependencies = [
  "fastapi>=0.110,<0.115",
  "sqladmin>=0.16,<0.18",
  "sqlalchemy[asyncio]>=2.0,<2.1",
  "asyncpg>=0.29,<0.30",
  "uvicorn[standard]>=0.30,<0.31",
  "pydantic-settings>=2.3,<2.5",
  "python-dotenv>=1.0,<1.1",
  "passlib[bcrypt]>=1.7,<1.8",
  "jinja2>=3.1,<3.2"
]

[project.optional-dependencies]
dev = [
  "alembic>=1.12,<1.14",
  "pytest>=8.2,<8.3",
  "httpx>=0.27,<0.28",
  "ruff>=0.6,<0.7"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
